# Africoin

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  quick-build.sh
.github/: AUTO_MERGE.md
.github/workflows/: auto-merge.yml  ci.yml  cleanup.yml  deploy-to-ec2.yml
depends/: .gitkeep
doc/: contributing.md  whitepaper.md
docs/: PEERCOIN_INTEGRATION.md  PEERCOIN_SECURITY.md  RAILWAY_STAKING.md
scripts/: apply_branding.sh  apply_chain_params.sh  apply_security.sh  apply_staking.sh
src/: CMakeLists.txt  Makefile.am  init.cpp  main.cpp  peercoin_security.cpp  peercoin_security.h
src/consensus/: fee_burner.cpp  railway.h  validation.cpp
src/net/: addrman.cpp  net.cpp  protocol.h
src/railway/: railway_staking.h  railways_staking_manager.cpp  railways_staking_manager.h
src/rpc/: mining.cpp
src/security/: checkpoints.cpp  checkpoints.h  kernel.cpp  kernel.h  security_config.h  stakemodifier.cpp  stakemodifier.h
src/staking/: hybrid_staking.cpp  hybrid_staking.h
src/test/: africoin_tests.cpp  pos_kernel_tests.cpp  railway_tests.cpp
src/wallet/: staking.cpp  wallet.cpp
